samples/_failures_safe/1761535992_e1c158_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_506f1da9.c: In function ‘main’:
./samples/SAFE/__tmp_506f1da9.c:174:5: error: expected ‘,’ or ‘;’ at end of input
  174 |     size_t len = strlen
      |     ^~~~~~
./samples/SAFE/__tmp_506f1da9.c:174:5: error: expected declaration or statement at end of input
